fix chart with ... for too short chart item, fix modal background

--- a/app/assets/stylesheets/create-bill-modal.css
+++ b/app/assets/stylesheets/create-bill-modal.css
@@ -5,7 +5,7 @@
   background: rgba(238,	238,	238, 0.8);
   position: fixed;
   top: 0;
-  bottom: 0;
+  bottom: -862px;
   right: 0;
   left: 0;
   z-index: 0;
